force-app/main/default/objects/Property_Image__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <formula>IF(
ISBLANK(Property_Image_URL__c),
&apos;&apos;,
IMAGE(TRIM(Property_Image_URL__c), &quot;Image&quot;, 500, 500)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>