force-app/main/default/objects/Property_Image__c/fields/Property_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Property_Image_URL__c</fullName>
    <label>Property Image URL</label>
    <type>Url</type>
</CustomField>