force-app/main/default/objects/Property_Image__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Property__c</columns>
    <columns>Property_Image_URL__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>